CSS file system/tree had to be included from a different file.

--- a/var/templates/System/Framework/frameLeft.html
+++ b/var/templates/System/Framework/frameLeft.html
@@ -14,6 +14,8 @@
 <o2 addJsFile file="List"          />
 <o2 addJsFile file="DragList"      />
 
+<o2 addCssFile file="system/tree" />
+
 <o2 addCss>
   html {
     overflow : hidden;
